tests/integration/tests/invalid_input/06_empty_input_file/sample.itest
RUN: %cat "%S/filecheck.input" | %expect_exit 2 %FILECHECK_EXEC "%S/filecheck.check" | %FILECHECK_TESTER_EXEC "%s"

CHECK: FileCheck error: '-' is empty.
CHECK: FileCheck command line:  {{.*}}.check{{$}}
